--- a/public/style/fonts/fontello/demo.html
+++ b/public/style/fonts/fontello/demo.html
@@ -264,9 +264,10 @@ body {
         <div title="Code: 0xe800" class="the-icons span3"><i class="icon-user"></i> <span class="i-name">icon-user</span><span class="i-code">0xe800</span></div>
         <div title="Code: 0xe802" class="the-icons span3"><i class="icon-left-open"></i> <span class="i-name">icon-left-open</span><span class="i-code">0xe802</span></div>
         <div title="Code: 0xe801" class="the-icons span3"><i class="icon-right-open"></i> <span class="i-name">icon-right-open</span><span class="i-code">0xe801</span></div>
-        <div title="Code: 0xe804" class="the-icons span3"><i class="icon-left-open-1"></i> <span class="i-name">icon-left-open-1</span><span class="i-code">0xe804</span></div>
+        <div title="Code: 0xe805" class="the-icons span3"><i class="icon-zoom-in"></i> <span class="i-name">icon-zoom-in</span><span class="i-code">0xe805</span></div>
       </div>
       <div class="row">
+        <div title="Code: 0xe804" class="the-icons span3"><i class="icon-left-open-1"></i> <span class="i-name">icon-left-open-1</span><span class="i-code">0xe804</span></div>
         <div title="Code: 0xe803" class="the-icons span3"><i class="icon-right-open-1"></i> <span class="i-name">icon-right-open-1</span><span class="i-code">0xe803</span></div>
       </div>
     </div>
